several bugfixes to new networklayer, integration of new networklib started

--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -347,12 +347,75 @@ m4trace:configure.ac:23: -1- m4_pattern_allow([^LUA_CFLAGS$])
 m4trace:configure.ac:24: -1- AC_SUBST([LUA_LIBS])
 m4trace:configure.ac:24: -1- AC_SUBST_TRACE([LUA_LIBS])
 m4trace:configure.ac:24: -1- m4_pattern_allow([^LUA_LIBS$])
-m4trace:configure.ac:28: -1- AC_SUBST([CXX])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CXX])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^CXX$])
-m4trace:configure.ac:28: -1- AC_SUBST([CXXFLAGS])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CXXFLAGS])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^CXXFLAGS$])
+m4trace:configure.ac:27: -1- AC_SUBST([CXX])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([CXX])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^CXX$])
+m4trace:configure.ac:27: -1- AC_SUBST([CXXFLAGS])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([CXXFLAGS])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^CXXFLAGS$])
+m4trace:configure.ac:27: -1- AC_SUBST([LDFLAGS])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([LDFLAGS])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^LDFLAGS$])
+m4trace:configure.ac:27: -1- AC_SUBST([LIBS])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([LIBS])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^LIBS$])
+m4trace:configure.ac:27: -1- AC_SUBST([CPPFLAGS])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([CPPFLAGS])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^CPPFLAGS$])
+m4trace:configure.ac:27: -1- AC_SUBST([CXX])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([CXX])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^CXX$])
+m4trace:configure.ac:27: -1- AC_SUBST([ac_ct_CXX])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([ac_ct_CXX])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^ac_ct_CXX$])
+m4trace:configure.ac:27: -1- AC_SUBST([EXEEXT], [$ac_cv_exeext])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([EXEEXT])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^EXEEXT$])
+m4trace:configure.ac:27: -1- AC_SUBST([OBJEXT], [$ac_cv_objext])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([OBJEXT])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^OBJEXT$])
+m4trace:configure.ac:27: -1- AC_SUBST([DEPDIR], ["${am__leading_dot}deps"])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([DEPDIR])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^DEPDIR$])
+m4trace:configure.ac:27: -1- AC_SUBST([am__include])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([am__include])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^am__include$])
+m4trace:configure.ac:27: -1- AC_SUBST([am__quote])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([am__quote])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^am__quote$])
+m4trace:configure.ac:27: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
+m4trace:configure.ac:27: -1- AC_SUBST([AMDEP_TRUE])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([AMDEP_TRUE])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^AMDEP_TRUE$])
+m4trace:configure.ac:27: -1- AC_SUBST([AMDEP_FALSE])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([AMDEP_FALSE])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^AMDEP_FALSE$])
+m4trace:configure.ac:27: -1- _AM_SUBST_NOTMAKE([AMDEP_TRUE])
+m4trace:configure.ac:27: -1- _AM_SUBST_NOTMAKE([AMDEP_FALSE])
+m4trace:configure.ac:27: -1- AC_SUBST([AMDEPBACKSLASH])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([AMDEPBACKSLASH])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^AMDEPBACKSLASH$])
+m4trace:configure.ac:27: -1- _AM_SUBST_NOTMAKE([AMDEPBACKSLASH])
+m4trace:configure.ac:27: -1- AC_SUBST([CXXDEPMODE], [depmode=$am_cv_CXX_dependencies_compiler_type])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([CXXDEPMODE])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^CXXDEPMODE$])
+m4trace:configure.ac:27: -1- AM_CONDITIONAL([am__fastdepCXX], [
+  test "x$enable_dependency_tracking" != xno \
+  && test "$am_cv_CXX_dependencies_compiler_type" = gcc3])
+m4trace:configure.ac:27: -1- AC_SUBST([am__fastdepCXX_TRUE])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([am__fastdepCXX_TRUE])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^am__fastdepCXX_TRUE$])
+m4trace:configure.ac:27: -1- AC_SUBST([am__fastdepCXX_FALSE])
+m4trace:configure.ac:27: -1- AC_SUBST_TRACE([am__fastdepCXX_FALSE])
+m4trace:configure.ac:27: -1- m4_pattern_allow([^am__fastdepCXX_FALSE$])
+m4trace:configure.ac:27: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_TRUE])
+m4trace:configure.ac:27: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
+m4trace:configure.ac:28: -1- AC_SUBST([CC])
+m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:28: -1- AC_SUBST([CFLAGS])
+m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CFLAGS])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^CFLAGS$])
 m4trace:configure.ac:28: -1- AC_SUBST([LDFLAGS])
 m4trace:configure.ac:28: -1- AC_SUBST_TRACE([LDFLAGS])
 m4trace:configure.ac:28: -1- m4_pattern_allow([^LDFLAGS$])
@@ -362,107 +425,50 @@ m4trace:configure.ac:28: -1- m4_pattern_allow([^LIBS$])
 m4trace:configure.ac:28: -1- AC_SUBST([CPPFLAGS])
 m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CPPFLAGS])
 m4trace:configure.ac:28: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:28: -1- AC_SUBST([CXX])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CXX])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^CXX$])
-m4trace:configure.ac:28: -1- AC_SUBST([ac_ct_CXX])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([ac_ct_CXX])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^ac_ct_CXX$])
-m4trace:configure.ac:28: -1- AC_SUBST([EXEEXT], [$ac_cv_exeext])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([EXEEXT])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^EXEEXT$])
-m4trace:configure.ac:28: -1- AC_SUBST([OBJEXT], [$ac_cv_objext])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([OBJEXT])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^OBJEXT$])
-m4trace:configure.ac:28: -1- AC_SUBST([DEPDIR], ["${am__leading_dot}deps"])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([DEPDIR])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^DEPDIR$])
-m4trace:configure.ac:28: -1- AC_SUBST([am__include])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([am__include])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^am__include$])
-m4trace:configure.ac:28: -1- AC_SUBST([am__quote])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([am__quote])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^am__quote$])
-m4trace:configure.ac:28: -1- AM_CONDITIONAL([AMDEP], [test "x$enable_dependency_tracking" != xno])
-m4trace:configure.ac:28: -1- AC_SUBST([AMDEP_TRUE])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([AMDEP_TRUE])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^AMDEP_TRUE$])
-m4trace:configure.ac:28: -1- AC_SUBST([AMDEP_FALSE])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([AMDEP_FALSE])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^AMDEP_FALSE$])
-m4trace:configure.ac:28: -1- _AM_SUBST_NOTMAKE([AMDEP_TRUE])
-m4trace:configure.ac:28: -1- _AM_SUBST_NOTMAKE([AMDEP_FALSE])
-m4trace:configure.ac:28: -1- AC_SUBST([AMDEPBACKSLASH])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([AMDEPBACKSLASH])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^AMDEPBACKSLASH$])
-m4trace:configure.ac:28: -1- _AM_SUBST_NOTMAKE([AMDEPBACKSLASH])
-m4trace:configure.ac:28: -1- AC_SUBST([CXXDEPMODE], [depmode=$am_cv_CXX_dependencies_compiler_type])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CXXDEPMODE])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^CXXDEPMODE$])
-m4trace:configure.ac:28: -1- AM_CONDITIONAL([am__fastdepCXX], [
+m4trace:configure.ac:28: -1- AC_SUBST([CC])
+m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:28: -1- AC_SUBST([CC])
+m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:28: -1- AC_SUBST([CC])
+m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:28: -1- AC_SUBST([CC])
+m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CC])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^CC$])
+m4trace:configure.ac:28: -1- AC_SUBST([ac_ct_CC])
+m4trace:configure.ac:28: -1- AC_SUBST_TRACE([ac_ct_CC])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^ac_ct_CC$])
+m4trace:configure.ac:28: -1- AC_SUBST([CCDEPMODE], [depmode=$am_cv_CC_dependencies_compiler_type])
+m4trace:configure.ac:28: -1- AC_SUBST_TRACE([CCDEPMODE])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^CCDEPMODE$])
+m4trace:configure.ac:28: -1- AM_CONDITIONAL([am__fastdepCC], [
   test "x$enable_dependency_tracking" != xno \
-  && test "$am_cv_CXX_dependencies_compiler_type" = gcc3])
-m4trace:configure.ac:28: -1- AC_SUBST([am__fastdepCXX_TRUE])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([am__fastdepCXX_TRUE])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^am__fastdepCXX_TRUE$])
-m4trace:configure.ac:28: -1- AC_SUBST([am__fastdepCXX_FALSE])
-m4trace:configure.ac:28: -1- AC_SUBST_TRACE([am__fastdepCXX_FALSE])
-m4trace:configure.ac:28: -1- m4_pattern_allow([^am__fastdepCXX_FALSE$])
-m4trace:configure.ac:28: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_TRUE])
-m4trace:configure.ac:28: -1- _AM_SUBST_NOTMAKE([am__fastdepCXX_FALSE])
-m4trace:configure.ac:29: -1- AC_SUBST([CC])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([CC])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^CC$])
-m4trace:configure.ac:29: -1- AC_SUBST([CFLAGS])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([CFLAGS])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^CFLAGS$])
-m4trace:configure.ac:29: -1- AC_SUBST([LDFLAGS])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([LDFLAGS])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^LDFLAGS$])
-m4trace:configure.ac:29: -1- AC_SUBST([LIBS])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([LIBS])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^LIBS$])
+  && test "$am_cv_CC_dependencies_compiler_type" = gcc3])
+m4trace:configure.ac:28: -1- AC_SUBST([am__fastdepCC_TRUE])
+m4trace:configure.ac:28: -1- AC_SUBST_TRACE([am__fastdepCC_TRUE])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^am__fastdepCC_TRUE$])
+m4trace:configure.ac:28: -1- AC_SUBST([am__fastdepCC_FALSE])
+m4trace:configure.ac:28: -1- AC_SUBST_TRACE([am__fastdepCC_FALSE])
+m4trace:configure.ac:28: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
+m4trace:configure.ac:28: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
+m4trace:configure.ac:28: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
+m4trace:configure.ac:29: -1- AC_SUBST([CPP])
+m4trace:configure.ac:29: -1- AC_SUBST_TRACE([CPP])
+m4trace:configure.ac:29: -1- m4_pattern_allow([^CPP$])
 m4trace:configure.ac:29: -1- AC_SUBST([CPPFLAGS])
 m4trace:configure.ac:29: -1- AC_SUBST_TRACE([CPPFLAGS])
 m4trace:configure.ac:29: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:29: -1- AC_SUBST([CC])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([CC])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^CC$])
-m4trace:configure.ac:29: -1- AC_SUBST([CC])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([CC])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^CC$])
-m4trace:configure.ac:29: -1- AC_SUBST([CC])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([CC])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^CC$])
-m4trace:configure.ac:29: -1- AC_SUBST([CC])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([CC])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^CC$])
-m4trace:configure.ac:29: -1- AC_SUBST([ac_ct_CC])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([ac_ct_CC])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^ac_ct_CC$])
-m4trace:configure.ac:29: -1- AC_SUBST([CCDEPMODE], [depmode=$am_cv_CC_dependencies_compiler_type])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([CCDEPMODE])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^CCDEPMODE$])
-m4trace:configure.ac:29: -1- AM_CONDITIONAL([am__fastdepCC], [
-  test "x$enable_dependency_tracking" != xno \
-  && test "$am_cv_CC_dependencies_compiler_type" = gcc3])
-m4trace:configure.ac:29: -1- AC_SUBST([am__fastdepCC_TRUE])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([am__fastdepCC_TRUE])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^am__fastdepCC_TRUE$])
-m4trace:configure.ac:29: -1- AC_SUBST([am__fastdepCC_FALSE])
-m4trace:configure.ac:29: -1- AC_SUBST_TRACE([am__fastdepCC_FALSE])
-m4trace:configure.ac:29: -1- m4_pattern_allow([^am__fastdepCC_FALSE$])
-m4trace:configure.ac:29: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_TRUE])
-m4trace:configure.ac:29: -1- _AM_SUBST_NOTMAKE([am__fastdepCC_FALSE])
-m4trace:configure.ac:30: -1- AC_SUBST([CPP])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^CPP$])
-m4trace:configure.ac:30: -1- AC_SUBST([CPPFLAGS])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([CPPFLAGS])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^CPPFLAGS$])
-m4trace:configure.ac:30: -1- AC_SUBST([CPP])
-m4trace:configure.ac:30: -1- AC_SUBST_TRACE([CPP])
-m4trace:configure.ac:30: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:29: -1- AC_SUBST([CPP])
+m4trace:configure.ac:29: -1- AC_SUBST_TRACE([CPP])
+m4trace:configure.ac:29: -1- m4_pattern_allow([^CPP$])
+m4trace:configure.ac:30: -1- AM_PROG_CC_C_O
+m4trace:configure.ac:30: -1- AC_DEFINE_TRACE_LITERAL([NO_MINUS_C_MINUS_O])
+m4trace:configure.ac:30: -1- m4_pattern_allow([^NO_MINUS_C_MINUS_O$])
+m4trace:configure.ac:30: -1- AH_OUTPUT([NO_MINUS_C_MINUS_O], [/* Define to 1 if your C compiler doesn\'t accept -c and -o together. */
+@%:@undef NO_MINUS_C_MINUS_O])
+m4trace:configure.ac:30: -1- AC_REQUIRE_AUX_FILE([compile])
 m4trace:configure.ac:34: -1- AH_OUTPUT([HAVE_LIBM], [/* Define to 1 if you have the `m\' library (-lm). */
 @%:@undef HAVE_LIBM])
 m4trace:configure.ac:34: -1- AC_DEFINE_TRACE_LITERAL([HAVE_LIBM])
