--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,7 @@
+*********** General instructions ************************
+
 Following libraries are required to build Summoning Wars:
+
 OGRE >= 1.4
 OIS
 CEGUI >= 0.5
@@ -8,7 +11,7 @@ lua5.1
 ogg, vorbis, vorbisfile
 
 If you are lucky, all libs may be installed via package manager (apt-get, yum, emerge, pacman, ...).
-Have a look at the  OS dependant install section
+Have a look at the "OS dependant install" section below.
 
 After installing the dependencies run these commands and cross your fingers:
 ./configure
@@ -21,20 +24,24 @@ make
 Currently, there is no make install, so you have to start the game in the directory where you compiled it.
 Please visit our Website www.sumwars.org to give some feedback or report bugs.
 
-************ OS dependant install tips ******************
-Ubuntu:
-To install all dependencies apart from Raknet try this line:
-sudo apt-get install libogremain-1.6.1 libogre-dev libois-1.2.0 libois-dev libalut0 libalut-dev liblua5.1-0 liblua5.1-0-dev libopenal1 libopenal-dev libogg0 libvorbis0a libvorbis-dev libvorbisfile3 libenet-dev
+*********** OS dependant install tips *******************
 
-*********** Troubleshooting ****************************
+Ubuntu:
+
+To install all needed dependencies enter the following command into the terminal:
+sudo apt-get install libogremain-1.6.4 libogre-dev libois-1.2.0 libois-dev libalut0 libalut-dev liblua5.1-0 liblua5.1-0-dev libopenal1 libopenal-dev libogg0 libvorbis0a libvorbis-dev libvorbisfile3 libenet-dev libceguiogre-dev libcegui-mk2-dev
+
+Then follow the "General instructions" section above to install the game.
+
+*********** Troubleshooting *****************************
 
 Problem: Rendering does not work under Windows:
 Solution: Try replacing ogre.cfg by this (omit the last and the first line of course):
+
 (Begin of ogre.cfg)
 Render System=Direct3D9 Rendering Subsystem
 
 [Direct3D9 Rendering Subsystem]
 Full Screen=No
 Video Mode=1024 x 768 @ 32-bit colour
-(End of ogre.cfg9
-
+(End of ogre.cfg9)
